// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`find-tasks-by-date tool edge cases should handle empty results 1`] = `
"Today's tasks + overdue: 0 (limit 50).
Filter: today + overdue tasks + 6 more days.
No results. Great job! No tasks for today or overdue."
`;

exports[`find-tasks-by-date tool label filtering should combine date filters with label filters 1`] = `
"Tasks for 2025-08-15: 1 (limit 25).
Filter: 2025-08-15; labels: @important.
Preview:
    Important task for specific date • due 2025-08-15 • P4 • important • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing tasks by date range only returns tasks for the startDate when daysCount is 1 1`] = `
"Tasks for 2025-08-20: 1 (limit 50).
Filter: 2025-08-20.
Preview:
    Task for specific date • due 2025-08-20 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing tasks by date range should get tasks for today when startDate is "today" (includes overdue) 1`] = `
"Today's tasks + overdue: 1 (limit 50).
Filter: today + overdue tasks + 6 more days.
Preview:
    Today task • due 2025-08-15 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing tasks by date range should handle multiple days with pagination 1`] = `
"Tasks for 2025-08-20: 2 (limit 20), more available.
Filter: 2025-08-20 to 2025-08-23.
Preview:
    Multi-day task 1 • due 2025-08-20 • P4 • id=8485093749
    Multi-day task 2 • due 2025-08-21 • P4 • id=8485093750
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track
- Pass cursor 'next-page-cursor' to fetch more results."
`;

exports[`find-tasks-by-date tool listing tasks by date range should handle specific date 1`] = `
"Tasks for 2025-08-20: 1 (limit 50).
Filter: 2025-08-20 to 2025-08-27.
Preview:
    Specific date task • due 2025-08-20 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool next steps logic should provide helpful suggestions for empty date range results 1`] = `
"Tasks for 2025-08-20: 0 (limit 10).
Filter: 2025-08-20.
No results. Expand date range with larger 'daysCount'; Check today's tasks with startDate='today'."
`;

exports[`find-tasks-by-date tool next steps logic should provide helpful suggestions for empty today results 1`] = `
"Today's tasks + overdue: 0 (limit 10).
Filter: today + overdue tasks.
No results. Great job! No tasks for today or overdue."
`;

exports[`find-tasks-by-date tool next steps logic should suggest appropriate actions when hasOverdue is true 1`] = `
"Tasks for 2025-08-15: 1 (limit 10).
Filter: 2025-08-15.
Preview:
    Overdue task from list • due 2025-08-10 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool next steps logic should suggest today-focused actions when startDate is today 1`] = `
"Today's tasks + overdue: 1 (limit 10).
Filter: today + overdue tasks.
Preview:
    Today's task • due 2025-08-15 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool responsibleUser parameter should filter tasks by specific user email 1`] = `
"Today's tasks + overdue assigned to john@example.com: 1 (limit 50).
Filter: today + overdue tasks; assigned to: john@example.com.
Preview:
    Task assigned to John • due 2025-08-15 • P4 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;
